fix: flex-gap on ios browsers

--- a/src/scss/_backing.scss
+++ b/src/scss/_backing.scss
@@ -28,11 +28,10 @@
     display: grid;
     justify-content: center;
     grid-template-columns: repeat(auto-fit, minmax(255px, 1fr));
-    row-gap: 30px;
-    column-gap: 20px;
+    gap: 30px 20px;
 
     @media (max-width: $breakpoint480) {
-      row-gap: 20px;
+      gap: 20px;
     }
   }
 
@@ -98,9 +97,7 @@
     margin: 7px 0 0 0;
     display: flex;
     align-items: center;
-    // gap: 13px;
-    row-gap: 13px;
-    column-gap: 13px;
+    gap: 13px;
   }
 
   // .card__social
