--- a/src/scss/_displayDemo.scss
+++ b/src/scss/_displayDemo.scss
@@ -104,9 +104,10 @@
 
   &__button-section {
     margin: 62px 0 0 0;
-    display: flex;
-    // gap: 20px;
-    row-gap: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 144px);
+    gap: 20px;
+
 
     @media (max-width: $breakpoint768) {
       margin: 50px 0 0 0;
@@ -115,11 +116,8 @@
 
     @media (max-width: $breakpoint480) {
       margin: 40px 0 0 0;
-      flex-direction: column;
-      justify-content: center;
-      // gap: 10px;
-      row-gap: 10px;
-
+      grid-template-columns: repeat(1, 1fr);
+      gap: 10px;
     }
   }
 
@@ -127,9 +125,9 @@
 
   &__app {
     padding: 13px 26px;
-    display: inline-flex;
-    // gap: 10px;
-    column-gap: 10px;
+    display: grid;
+    grid-template-columns: minmax(min-content, max-content) min-content;
+    gap: 10px;
 
     @media (max-width: $breakpoint480) {
       padding: 13px 20px;
@@ -191,22 +189,17 @@
 }
 
 .benefits {
-  display: flex;
-  flex-wrap: wrap;
-  // gap: 80px;
-  row-gap: 80px;
-  column-gap: 80px;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(min-content, max-content));
+  gap: 30px 80px;
 
   @media (max-width: $breakpoint768) {
-    // gap: 40px;
-    row-gap: 40px;
-    column-gap: 40px;
+    gap: 20px 40px;
   }
 
   @media (max-width: $breakpoint480) {
-    // gap: 20px;
-    row-gap: 20px;
-    column-gap: 20px;
+    grid-template-columns: repeat(2, minmax(min-content, max-content));
+    gap: 20px 30px;
   }
 
   &_margin {
@@ -219,15 +212,7 @@
   }
 
   // .benefits__item
-  &__item {
-
-    @media (max-width: $breakpoint768) {
-      // gap: 20px;
-      row-gap: 20px;
-      column-gap: 20px;
-
-    }
-  }
+  &__item {}
 
   // .benefits__heaidng
 
