--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -9,44 +9,34 @@
   // .footer__wrapper
   &__wrapper {
     padding: 97px 0 89px 0;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 347px);
     justify-content: space-between;
 
     @media (max-width: $breakpoint992) {
-      flex-direction: column-reverse;
-      align-items: center;
-      // gap: 40px;
-      row-gap: 40px;
-      column-gap: 40px;
+      grid-template-columns: repeat(1, 60%);
+      justify-content: center;
+      gap: 40px;
+
+      &>*:first-child {
+        order: 1;
+      }
     }
 
     @media (max-width: $breakpoint768) {
-      max-width: 100%;
+      grid-template-columns: repeat(1, 70%);
     }
 
     @media (max-width: $breakpoint480) {
       padding: 57px 0 49px 0;
+      grid-template-columns: repeat(1, 1fr);
     }
   }
 
   // .footer__item
 
   &__item {
-    max-width: 347px;
-
-    @media (max-width: $breakpoint992) {
-      max-width: none;
-      width: 60%;
-    }
-
-    @media (max-width: $breakpoint768) {
-      max-width: none;
-      width: 70%;
-    }
-
-    @media (max-width: $breakpoint480) {
-      width: 100%;
-    }
+    width: 100%;
   }
 
   // .footer__logo-wrapper
@@ -115,17 +105,13 @@
 
   &__social-bar {
     margin: 34px 0 0 0;
-    display: flex;
-    // gap: 30px;
-    row-gap: 30px;
-    column-gap: 30px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(50px, max-content));
+    gap: 30px;
 
     @media (max-width: $breakpoint480) {
-      justify-content: center;
-      flex-wrap: wrap;
-      // gap: 20px;
-      row-gap: 20px;
-      column-gap: 20px;
+      margin: 34px 0 0 0;
+      gap: 20px;
     }
 
   }
