--- a/src/scss/_trusted.scss
+++ b/src/scss/_trusted.scss
@@ -39,14 +39,14 @@
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
-  // gap: 35px 69px;
-  row-gap: 35px;
-  column-gap: 69px;
+  //gap: 35px 69px;
+  @include flex-gap(35px, 69px);
+  margin-top: 35px;
 
   @media (max-width: $breakpoint768) {
     // gap: 30px;
-    row-gap: 30px;
-    column-gap: 30px;
+    @include flex-gap(30px, 30px);
+    margin-top: 35px;
   }
 
   // __link
